@@ -74,6 +74,7 @@ Application Changes:
 - Fixed AIs not being able to buy programs in career mode. Closes #5146
 - Dealer Connection now works properly for characters saved in a non-English language.
 - The addware bonus node now properly supports adding essence holes and anti-holes.
+- Gear markups now properly apply when adding gear as plugins to cyberware, vehicles, and items inside of vehicles.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
